Include path for vercel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -126,5 +126,6 @@
     // This improves issue grouping in Sentry.
     "sourceRoot": "/",
   },
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
