--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "nextjs-subscription-payments",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "correctme-web",
+  "version": "0.1.0",
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
@@ -25,6 +24,7 @@
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.1.5",
+    "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "2.4.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
@@ -32,10 +32,11 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "js-cookie": "^3.0.5",
-    "lucide-react": "0.330.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-merge-refs": "^2.1.1",
     "stripe": "^14.16.0",
     "tailwind-merge": "^2.2.1",
