--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
-    "js-cookie": "^3.0.5",
+    "cookie": "^0.6.0",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
@@ -44,6 +44,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
