--- a/package.json
+++ b/package.json
@@ -9,25 +9,12 @@
     "prettier-fix": "prettier --write .",
     "stripe:login": "stripe login",
     "stripe:listen": "stripe listen --forward-to=localhost:33/api/webhooks/stripe",
-    "stripe:fixtures": "stripe fixtures fixtures/stripe-fixtures.json",
-    "supabase:start": "npx supabase start",
-    "supabase:stop": "npx supabase stop",
-    "supabase:status": "npx supabase status",
-    "supabase:restart": "npm run supabase:stop && npm run supabase:start",
-    "supabase:reset": "npx supabase reset",
-    "supabase:link": "npx supabase link",
-    "supabase:generate-types": "npx supabase gen types typescript --local --schema public > types_db.ts",
-    "supabase:generate-migration": "npx supabase db diff | npx supabase migration new",
-    "supabase:generate-seed": "npx supabase db dump --data-only -f supabase/seed.sql",
-    "supabase:push": "npx supabase push",
-    "supabase:pull": "npx supabase pull"
+    "stripe:fixtures": "stripe fixtures fixtures/stripe-fixtures.json"
   },
   "dependencies": {
     "@radix-ui/react-toast": "^1.1.5",
     "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "2.4.0",
-    "@supabase/ssr": "^0.1.0",
-    "@supabase/supabase-js": "^2.39.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
@@ -58,7 +45,6 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "supabase": "^1.142.2",
     "typescript": "^5.3.3"
   }
 }
