--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
     "cookie": "^0.6.0",
+    "html-react-parser": "^5.1.10",
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
