--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-oauth/google": "^0.12.1",
     "@stripe/stripe-js": "2.4.0",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
